--- a/s10_jsp_va_jstl/bai_tap/hien_thi_danh_sach_khach_hang/build.gradle
+++ b/s10_jsp_va_jstl/bai_tap/hien_thi_danh_sach_khach_hang/build.gradle
@@ -12,7 +12,7 @@ repositories {
 
 dependencies {
     compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
-
+    implementation group: 'javax.servlet', name: 'jstl', version: '1.2'
     testCompile group: 'junit', name: 'junit', version: '4.11'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
