--- a/s10_jsp_va_jstl/thuc_hanh/ung_dung_tu_dien_don_gian_jsp/build.gradle
+++ b/s10_jsp_va_jstl/thuc_hanh/ung_dung_tu_dien_don_gian_jsp/build.gradle
@@ -14,3 +14,5 @@ dependencies {
     compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
 
 }
+tasks.withType(JavaCompile) { options.encoding = 'UTF-8'}
+
